# closure-ffi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/scripts/: assert_version_bump.py  package_version.py  release_notes.py
.github/workflows/: checks.yml  debug.yml  release.yml
examples/: context_hooking.rs  test_example.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: arch.rs  bare_closure.rs  cc.rs  jit_alloc.rs  lib.rs  thunk.rs  thunk_factory.rs  traits.rs
src/safe_jit/: aarch64.rs  arm.rs  arm_common.rs  arm_util.rs  mod.rs  util.rs  x86.rs  x86_64.rs
src/safe_jit/aarch64/: encoding.rs
src/safe_jit/arm_common/: encoding_aarch64.rs  encoding_arm.rs  encoding_thumb.rs
src/safe_jit/arm_util/: encoding_aarch64.rs  encoding_arm.rs  encoding_thumb.rs
tests/: test_builtin_alloc.rs  test_custom_alloc.rs  test_explicit_alloc.rs  test_hrtb_cconv.rs  test_macros.rs  test_variadic.rs
tests/slab_alloc/: mod.rs
