[workspace]
members = ["proc_macros"]

[workspace.package]
edition = "2021"
authors = ["William Tremblay <tremwil@users.noreply.github.com>"]
keywords = ["closure", "ffi"]
categories = ["development-tools::ffi", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tremwil/closure-ffi"
version = "3.0.0"

[package]
name = "closure-ffi"
description = "FFI utility for creating bare function pointers that invoke a closure"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[[example]]
name = "context_hooking"
crate-type = ["lib"]
test = true

[features]
default = ["std", "default_jit_alloc"]
std = []
global_jit_alloc = []
# spin is needed on no_std, but not std.
# Sadly there is no way to enable a dependency when a feature is *not* set
default_jit_alloc = ["global_jit_alloc", "dep:jit-allocator2", "spin"]
unstable = []
tuple_trait = ["unstable"]
c_variadic = ["unstable"]
coverage = ["unstable"]
proc_macros = ["dep:closure-ffi-proc-macros"]

[dependencies]
closure-ffi-proc-macros = { path = "proc_macros", version = "3.0.0", optional = true }
jit-allocator2 = {version = "0.2.9", optional = true }
spin = { version = "0.10", optional = true }

[target.'cfg(all(target_arch = "arm", target_os = "linux"))'.dependencies]
libc = "0.2"

[build-dependencies]
rustflags = "0.1.7"

[dev-dependencies]
spin = "0.10"
region = "3.0.2"

[target.'cfg(not(all(target_arch = "arm", target_os = "linux")))'.dev-dependencies]
clear-cache = "0.1.1"

[package.metadata.docs.rs]
features = ["proc_macros"]
rustdoc-args = ["--cfg", "docsrs"]