[package]
name = "closure-ffi-proc-macros"
version = "5.0.0"
description = "Proc macros used and exported by the closure-ffi crate"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
proc-macro2 = "1.0"
quote = "1.0"